--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "quagga": "^0.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-input-mask": "^2.0.4",
     "react-scripts": "5.0.1",
+    "react-text-mask": "^5.5.0",
     "styled-components": "^6.0.7",
     "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
