--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-input-mask": "^2.0.4",
+    "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "react-text-mask": "^5.5.0",
     "styled-components": "^6.0.7",
